gccida/c3/array_size_for_constructor
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/array_size_for_constructor/src/varasm.c:5116:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v3; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/array_size_for_constructor/src/varasm.c:5118:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/array_size_for_constructor/src/varasm.c:5119:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/array_size_for_constructor/src/varasm.c:5120:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/array_size_for_constructor/src/varasm.c:5121:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/array_size_for_constructor/src/varasm.c:5122:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/array_size_for_constructor/src/varasm.c:5123:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/array_size_for_constructor/src/varasm.c:5135:19: error: expected expression
v3 = ( tree_node *)v4; 
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/array_size_for_constructor/src/varasm.c:5135:8: error: use of undeclared identifier 'tree_node'
v3 = ( tree_node *)v4; 
       ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/array_size_for_constructor/src/obj/varasm.o] Error 1
